# axum-template

./: .gitignore  Cargo.toml  README.md
crates/common_utils/: Cargo.toml
crates/common_utils/src/: log_init.rs
crates/macros/serde_tag/: Cargo.toml
crates/macros/serde_tag/examples/: user.rs
crates/macros/serde_tag/src/: lib.rs
crates/macros/tracing_test/: Cargo.toml
crates/macros/tracing_test/src/: internal.rs  lib.rs  subscriber.rs
crates/macros/tracing_test_macro/: Cargo.toml
crates/macros/tracing_test_macro/src/: lib.rs
crates/service/: Cargo.toml
crates/service/migrations/: 20230521153203_init.up.sql
crates/service/src/: error.rs  main.rs
crates/service/src/core/: mod.rs
crates/service/src/core/curd/: mod.rs  user_info_curd.rs
crates/service/src/http/: mod.rs  serve.rs
crates/service/src/http/endpoint/: mod.rs  user_info.rs
crates/service/src/http/helper/: auth.rs  jwt.rs  mod.rs  request_uuid.rs
crates/service/src/http/schema/: mod.rs  tagged.rs  user_info.rs
crates/service/src/model/: user_info.rs
crates/service/src/utils/: graceful_shutdown.rs  mod.rs  test_db.rs  tracing_utils.rs
src/: main.rs
src/http/: mod.rs  state.rs
src/utils/: mod.rs
