[package]
name = "axum-template"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.71"
axum = { version = "0.6.18", features = ["json", "tracing", "headers"] }
chrono = "0.4.24"
dotenvy = "0.15.7"
serde = { version = "1.0.163", features = ["derive"] }
serde_json = "1.0.96"
sqlx = { version = "0.6.3", features = [
    "runtime-tokio-native-tls",
    "postgres",
] }
thiserror = "1.0.40"
tokio = { version = "1.28.1", features = ["full"] }
tower = { version = "0.4.13", features = ["full"] }
tower-http = { version = "0.4.0", features = ["full"] }
tracing = "0.1.37"
tracing-appender = "0.2.2"
tracing-subscriber = { version = "0.3.17", features = [
    "env-filter",
    "registry",
    "json",
] }
validator = { version = "0.16.0", features = ["derive"] }
