[workspace]
members = [
    "crates/service",
    "crates/utils",
    "crates/macros/tracing_test",
    "crates/macros/tracing_test_macro",
]


[workspace.dependencies]
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1" }
tracing = "0.1.29"
chrono = { version = "0.4.24", features = ["serde"] }
