[package]
name = "axum-template"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.71"
axum = { version = "0.6.19", features = ["json", "tracing", "headers"] }
chrono = "0.4.24"
csv = "1.2.1"
dotenvy = "0.15.7"
itertools = "0.10.5"
jsonwebtoken = "8.3.0"
once_cell = "1.17.1"
rust-argon2 = "1.0.0"
serde = { version = "1.0.163", features = ["derive"] }
serde_json = "1.0.96"
sqlx = { version = "0.6.3", features = [
    "runtime-tokio-rustls",
    "postgres",
] }
thiserror = "1.0.40"
tokio = { version = "1.28.1", features = ["full"] }
tower = { version = "0.4.13", features = ["full"] }
tower-http = { version = "0.4.3", features = ["full"] }
tracing = "0.1.37"
common_utils = { path = "../common_utils" }
tracing_test = { path = "../macros/tracing_test" }
uuid = { version = "1.3.3", features = ["v7"] }
validator = { version = "0.16.0", features = ["derive"] }
