[package]
name = "tracing_test"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
once_cell = "1.17.1"

tracing-core = "0.1.31"
tracing-subscriber = { version = "0.3.17", features = ["env-filter"] }
tracing_test_macro = {path = "../tracing_test_macro"}